# NumCSE

./: 2d_givens.cpp  Kronecker.hpp  README.md
Interpolation/: CMakeLists.txt
Interpolation/include/: evaluations.hpp  nodes.hpp
Interpolation/src/: evaluations.cpp  main.cpp  nodes.cpp  plot.py
